lab1/grammartree.output
Terminals unused in grammar

   NLINE


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: TYPE ExtDecList SEMICOLEN
    5       | TYPE FunDec CompSt
    6       | error SEMICOLEN
    7       | error RIGHTBRACE

    8 ExtDecList: IDENTIFIER
    9           | IDENTIFIER OPASSIGN CONSTVALUE
   10           | IDENTIFIER COMMA ExtDecList
   11           | IDENTIFIER OPASSIGN CONSTVALUE COMMA ExtDecList

   12 FunDec: IDENTIFIER LEFTBRAKET VarList RIGHTBRAKET
   13       | IDENTIFIER LEFTBRAKET RIGHTBRAKET

   14 VarList: ParamDec COMMA VarList
   15        | ParamDec

   16 ParamDec: TYPE IDENTIFIER

   17 CompSt: LEFTBRACE DefList StmtList RIGHTBRACE

   18 StmtList: Stmt StmtList
   19         | %empty

   20 Stmt: Exp SEMICOLEN
   21     | CompSt
   22     | IfStmt
   23     | ForStmt
   24     | WhileStmt
   25     | ReturnStmt SEMICOLEN
   26     | PrintStmt SEMICOLEN
   27     | error SEMICOLEN

   28 IfStmt: KEYIF LEFTBRAKET Exp RIGHTBRAKET Stmt
   29       | KEYIF LEFTBRAKET Exp RIGHTBRAKET Stmt KEYELSE Stmt

   30 ForStmt: KEYFOR LEFTBRAKET Exp SEMICOLEN Exp SEMICOLEN Exp RIGHTBRAKET Stmt

   31 WhileStmt: KEYWHILE LEFTBRAKET Exp RIGHTBRAKET Stmt

   32 ReturnStmt: KEYRETURN
   33           | KEYRETURN Exp

   34 PrintStmt: KEYPRINT LEFTBRAKET Exp RIGHTBRAKET

   35 DefList: Def DefList
   36        | %empty

   37 Def: TYPE DecList SEMICOLEN

   38 DecList: Dec
   39        | Dec COMMA DecList

   40 Dec: IDENTIFIER
   41    | IDENTIFIER OPASSIGN Exp

   42 Exp: Exp OPASSIGN Exp
   43    | Exp ROPAND Exp
   44    | Exp ROPOR Exp
   45    | Exp RELOP Exp
   46    | Exp OPADD Exp
   47    | Exp OPMINUS Exp
   48    | Exp OPMULTIPLY Exp
   49    | Exp OPDIVIDE Exp
   50    | Exp OPADDASSIGN Exp
   51    | Exp OPMINUSASSIGN Exp
   52    | Exp OPMULASSIGN Exp
   53    | Exp OPDIVASSIGN Exp
   54    | IDENTIFIER OPSELFADD
   55    | IDENTIFIER OPSELFMINUS
   56    | OPSELFADD IDENTIFIER
   57    | OPSELFMINUS IDENTIFIER
   58    | LEFTBRAKET Exp RIGHTBRAKET
   59    | ROPNOT Exp
   60    | OPMINUS Exp
   61    | OPADD Exp
   62    | IDENTIFIER LEFTBRAKET Args RIGHTBRAKET
   63    | IDENTIFIER LEFTBRAKET RIGHTBRAKET
   64    | IDENTIFIER
   65    | CONSTVALUE

   66 CONSTVALUE: CONSTBOOL
   67           | CONSTCHAR
   68           | CONSTINTD
   69           | CONSTINTH
   70           | CONSTFLOAT
   71           | CONSTSTRING

   72 Args: Exp COMMA Args
   73     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6 7 27
COMMA (258) 10 11 14 39 72
SEMICOLEN (259) 4 6 20 25 26 27 30 37
LEFTBRAKET (260) 12 13 28 29 30 31 34 58 62 63
RIGHTBRAKET (261) 12 13 28 29 30 31 34 58 62 63
LEFTBRACE (262) 17
RIGHTBRACE (263) 7 17
OPASSIGN (264) 9 11 41 42
OPADD (265) 46 61
OPMINUS (266) 47 60
OPSELFADD (267) 54 56
OPSELFMINUS (268) 55 57
OPMULTIPLY (269) 48
OPDIVIDE (270) 49
OPADDASSIGN (271) 50
OPMINUSASSIGN (272) 51
OPMULASSIGN (273) 52
OPDIVASSIGN (274) 53
ROPAND (275) 43
ROPOR (276) 44
ROPNOT (277) 59
RELOP (278) 45
TYPE (279) 4 5 16 37
KEYIF (280) 28 29
KEYELSE (281) 29
KEYWHILE (282) 31
KEYFOR (283) 30
KEYRETURN (284) 32 33
KEYPRINT (285) 34
NLINE (286)
CONSTBOOL (287) 66
CONSTCHAR (288) 67
CONSTINTD (289) 68
CONSTINTH (290) 69
CONSTFLOAT (291) 70
CONSTSTRING (292) 71
IDENTIFIER (293) 8 9 10 11 12 13 16 40 41 54 55 56 57 62 63 64
UMINUS (294)
UADD (295)
NOELSE (296)


Nonterminals, with rules where they appear

$accept (42)
    左： 0
Program (43)
    左： 1, 右： 0
ExtDefList (44)
    左： 2 3, 右： 1 2
ExtDef (45)
    左： 4 5 6 7, 右： 2
ExtDecList (46)
    左： 8 9 10 11, 右： 4 10 11
FunDec (47)
    左： 12 13, 右： 5
VarList (48)
    左： 14 15, 右： 12 14
ParamDec (49)
    左： 16, 右： 14 15
CompSt (50)
    左： 17, 右： 5 21
StmtList (51)
    左： 18 19, 右： 17 18
Stmt (52)
    左： 20 21 22 23 24 25 26 27, 右： 18 28 29 30 31
IfStmt (53)
    左： 28 29, 右： 22
ForStmt (54)
    左： 30, 右： 23
WhileStmt (55)
    左： 31, 右： 24
ReturnStmt (56)
    左： 32 33, 右： 25
PrintStmt (57)
    左： 34, 右： 26
DefList (58)
    左： 35 36, 右： 17 35
Def (59)
    左： 37, 右： 35
DecList (60)
    左： 38 39, 右： 37 39
Dec (61)
    左： 40 41, 右： 38 39
Exp (62)
    左： 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65, 右： 20 28 29 30 31 33 34 41 42 43 44 45 46 47
    48 49 50 51 52 53 58 59 60 61 72 73
CONSTVALUE (63)
    左： 66 67 68 69 70 71, 右： 9 11 65
Args (64)
    左： 72 73, 右： 62 72


State 0

    0 $accept: . Program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 3 (ExtDefList)

    Program     转到状态 3
    ExtDefList  转到状态 4
    ExtDef      转到状态 5


State 1

    6 ExtDef: error . SEMICOLEN
    7       | error . RIGHTBRACE

    SEMICOLEN   shift, and go to state 6
    RIGHTBRACE  shift, and go to state 7


State 2

    4 ExtDef: TYPE . ExtDecList SEMICOLEN
    5       | TYPE . FunDec CompSt

    IDENTIFIER  shift, and go to state 8

    ExtDecList  转到状态 9
    FunDec      转到状态 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList  转到状态 12
    ExtDef      转到状态 5


State 6

    6 ExtDef: error SEMICOLEN .

    $default  reduce using rule 6 (ExtDef)


State 7

    7 ExtDef: error RIGHTBRACE .

    $default  reduce using rule 7 (ExtDef)


State 8

    8 ExtDecList: IDENTIFIER .
    9           | IDENTIFIER . OPASSIGN CONSTVALUE
   10           | IDENTIFIER . COMMA ExtDecList
   11           | IDENTIFIER . OPASSIGN CONSTVALUE COMMA ExtDecList
   12 FunDec: IDENTIFIER . LEFTBRAKET VarList RIGHTBRAKET
   13       | IDENTIFIER . LEFTBRAKET RIGHTBRAKET

    COMMA       shift, and go to state 13
    LEFTBRAKET  shift, and go to state 14
    OPASSIGN    shift, and go to state 15

    $default  reduce using rule 8 (ExtDecList)


State 9

    4 ExtDef: TYPE ExtDecList . SEMICOLEN

    SEMICOLEN  shift, and go to state 16


State 10

    5 ExtDef: TYPE FunDec . CompSt

    LEFTBRACE  shift, and go to state 17

    CompSt  转到状态 18


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   10 ExtDecList: IDENTIFIER COMMA . ExtDecList

    IDENTIFIER  shift, and go to state 19

    ExtDecList  转到状态 20


State 14

   12 FunDec: IDENTIFIER LEFTBRAKET . VarList RIGHTBRAKET
   13       | IDENTIFIER LEFTBRAKET . RIGHTBRAKET

    RIGHTBRAKET  shift, and go to state 21
    TYPE         shift, and go to state 22

    VarList   转到状态 23
    ParamDec  转到状态 24


State 15

    9 ExtDecList: IDENTIFIER OPASSIGN . CONSTVALUE
   11           | IDENTIFIER OPASSIGN . CONSTVALUE COMMA ExtDecList

    CONSTBOOL    shift, and go to state 25
    CONSTCHAR    shift, and go to state 26
    CONSTINTD    shift, and go to state 27
    CONSTINTH    shift, and go to state 28
    CONSTFLOAT   shift, and go to state 29
    CONSTSTRING  shift, and go to state 30

    CONSTVALUE  转到状态 31


State 16

    4 ExtDef: TYPE ExtDecList SEMICOLEN .

    $default  reduce using rule 4 (ExtDef)


State 17

   17 CompSt: LEFTBRACE . DefList StmtList RIGHTBRACE

    TYPE  shift, and go to state 32

    $default  reduce using rule 36 (DefList)

    DefList  转到状态 33
    Def      转到状态 34


State 18

    5 ExtDef: TYPE FunDec CompSt .

    $default  reduce using rule 5 (ExtDef)


State 19

    8 ExtDecList: IDENTIFIER .
    9           | IDENTIFIER . OPASSIGN CONSTVALUE
   10           | IDENTIFIER . COMMA ExtDecList
   11           | IDENTIFIER . OPASSIGN CONSTVALUE COMMA ExtDecList

    COMMA     shift, and go to state 13
    OPASSIGN  shift, and go to state 15

    $default  reduce using rule 8 (ExtDecList)


State 20

   10 ExtDecList: IDENTIFIER COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 21

   13 FunDec: IDENTIFIER LEFTBRAKET RIGHTBRAKET .

    $default  reduce using rule 13 (FunDec)


State 22

   16 ParamDec: TYPE . IDENTIFIER

    IDENTIFIER  shift, and go to state 35


State 23

   12 FunDec: IDENTIFIER LEFTBRAKET VarList . RIGHTBRAKET

    RIGHTBRAKET  shift, and go to state 36


State 24

   14 VarList: ParamDec . COMMA VarList
   15        | ParamDec .

    COMMA  shift, and go to state 37

    $default  reduce using rule 15 (VarList)


State 25

   66 CONSTVALUE: CONSTBOOL .

    $default  reduce using rule 66 (CONSTVALUE)


State 26

   67 CONSTVALUE: CONSTCHAR .

    $default  reduce using rule 67 (CONSTVALUE)


State 27

   68 CONSTVALUE: CONSTINTD .

    $default  reduce using rule 68 (CONSTVALUE)


State 28

   69 CONSTVALUE: CONSTINTH .

    $default  reduce using rule 69 (CONSTVALUE)


State 29

   70 CONSTVALUE: CONSTFLOAT .

    $default  reduce using rule 70 (CONSTVALUE)


State 30

   71 CONSTVALUE: CONSTSTRING .

    $default  reduce using rule 71 (CONSTVALUE)


State 31

    9 ExtDecList: IDENTIFIER OPASSIGN CONSTVALUE .
   11           | IDENTIFIER OPASSIGN CONSTVALUE . COMMA ExtDecList

    COMMA  shift, and go to state 38

    $default  reduce using rule 9 (ExtDecList)


State 32

   37 Def: TYPE . DecList SEMICOLEN

    IDENTIFIER  shift, and go to state 39

    DecList  转到状态 40
    Dec      转到状态 41


State 33

   17 CompSt: LEFTBRACE DefList . StmtList RIGHTBRACE

    error        shift, and go to state 42
    LEFTBRAKET   shift, and go to state 43
    LEFTBRACE    shift, and go to state 17
    OPADD        shift, and go to state 44
    OPMINUS      shift, and go to state 45
    OPSELFADD    shift, and go to state 46
    OPSELFMINUS  shift, and go to state 47
    ROPNOT       shift, and go to state 48
    KEYIF        shift, and go to state 49
    KEYWHILE     shift, and go to state 50
    KEYFOR       shift, and go to state 51
    KEYRETURN    shift, and go to state 52
    KEYPRINT     shift, and go to state 53
    CONSTBOOL    shift, and go to state 25
    CONSTCHAR    shift, and go to state 26
    CONSTINTD    shift, and go to state 27
    CONSTINTH    shift, and go to state 28
    CONSTFLOAT   shift, and go to state 29
    CONSTSTRING  shift, and go to state 30
    IDENTIFIER   shift, and go to state 54

    RIGHTBRACE  reduce using rule 19 (StmtList)

    CompSt      转到状态 55
    StmtList    转到状态 56
    Stmt        转到状态 57
    IfStmt      转到状态 58
    ForStmt     转到状态 59
    WhileStmt   转到状态 60
    ReturnStmt  转到状态 61
    PrintStmt   转到状态 62
    Exp         转到状态 63
    CONSTVALUE  转到状态 64


State 34

   35 DefList: Def . DefList

    TYPE  shift, and go to state 32

    $default  reduce using rule 36 (DefList)

    DefList  转到状态 65
    Def      转到状态 34


State 35

   16 ParamDec: TYPE IDENTIFIER .

    $default  reduce using rule 16 (ParamDec)


State 36

   12 FunDec: IDENTIFIER LEFTBRAKET VarList RIGHTBRAKET .

    $default  reduce using rule 12 (FunDec)


State 37

   14 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 22

    VarList   转到状态 66
    ParamDec  转到状态 24


State 38

   11 ExtDecList: IDENTIFIER OPASSIGN CONSTVALUE COMMA . ExtDecList

    IDENTIFIER  shift, and go to state 19

    ExtDecList  转到状态 67


State 39

   40 Dec: IDENTIFIER .
   41    | IDENTIFIER . OPASSIGN Exp

    OPASSIGN  shift, and go to state 68

    $default  reduce using rule 40 (Dec)


State 40

   37 Def: TYPE DecList . SEMICOLEN

    SEMICOLEN  shift, and go to state 69


State 41

   38 DecList: Dec .
   39        | Dec . COMMA DecList

    COMMA  shift, and go to state 70

    $default  reduce using rule 38 (DecList)


State 42

   27 Stmt: error . SEMICOLEN

    SEMICOLEN  shift, and go to state 71


State 43

   58 Exp: LEFTBRAKET . Exp RIGHTBRAKET

    LEFTBRAKET   shift, and go to state 43
    OPADD        shift, and go to state 44
    OPMINUS      shift, and go to state 45
    OPSELFADD    shift, and go to state 46
    OPSELFMINUS  shift, and go to state 47
    ROPNOT       shift, and go to state 48
    CONSTBOOL    shift, and go to state 25
    CONSTCHAR    shift, and go to state 26
    CONSTINTD    shift, and go to state 27
    CONSTINTH    shift, and go to state 28
    CONSTFLOAT   shift, and go to state 29
    CONSTSTRING  shift, and go to state 30
    IDENTIFIER   shift, and go to state 54

    Exp         转到状态 72
    CONSTVALUE  转到状态 64


State 44

   61 Exp: OPADD . Exp

    LEFTBRAKET   shift, and go to state 43
    OPADD        shift, and go to state 44
    OPMINUS      shift, and go to state 45
    OPSELFADD    shift, and go to state 46
    OPSELFMINUS  shift, and go to state 47
    ROPNOT       shift, and go to state 48
    CONSTBOOL    shift, and go to state 25
    CONSTCHAR    shift, and go to state 26
    CONSTINTD    shift, and go to state 27
    CONSTINTH    shift, and go to state 28
    CONSTFLOAT   shift, and go to state 29
    CONSTSTRING  shift, and go to state 30
    IDENTIFIER   shift, and go to state 54

    Exp         转到状态 73
    CONSTVALUE  转到状态 64


State 45

   60 Exp: OPMINUS . Exp

    LEFTBRAKET   shift, and go to state 43
    OPADD        shift, and go to state 44
    OPMINUS      shift, and go to state 45
    OPSELFADD    shift, and go to state 46
    OPSELFMINUS  shift, and go to state 47
    ROPNOT       shift, and go to state 48
    CONSTBOOL    shift, and go to state 25
    CONSTCHAR    shift, and go to state 26
    CONSTINTD    shift, and go to state 27
    CONSTINTH    shift, and go to state 28
    CONSTFLOAT   shift, and go to state 29
    CONSTSTRING  shift, and go to state 30
    IDENTIFIER   shift, and go to state 54

    Exp         转到状态 74
    CONSTVALUE  转到状态 64


State 46

   56 Exp: OPSELFADD . IDENTIFIER

    IDENTIFIER  shift, and go to state 75


State 47

   57 Exp: OPSELFMINUS . IDENTIFIER

    IDENTIFIER  shift, and go to state 76


State 48

   59 Exp: ROPNOT . Exp

    LEFTBRAKET   shift, and go to state 43
    OPADD        shift, and go to state 44
    OPMINUS      shift, and go to state 45
    OPSELFADD    shift, and go to state 46
    OPSELFMINUS  shift, and go to state 47
    ROPNOT       shift, and go to state 48
    CONSTBOOL    shift, and go to state 25
    CONSTCHAR    shift, and go to state 26
    CONSTINTD    shift, and go to state 27
    CONSTINTH    shift, and go to state 28
    CONSTFLOAT   shift, and go to state 29
    CONSTSTRING  shift, and go to state 30
    IDENTIFIER   shift, and go to state 54

    Exp         转到状态 77
    CONSTVALUE  转到状态 64


State 49

   28 IfStmt: KEYIF . LEFTBRAKET Exp RIGHTBRAKET Stmt
   29       | KEYIF . LEFTBRAKET Exp RIGHTBRAKET Stmt KEYELSE Stmt

    LEFTBRAKET  shift, and go to state 78


State 50

   31 WhileStmt: KEYWHILE . LEFTBRAKET Exp RIGHTBRAKET Stmt

    LEFTBRAKET  shift, and go to state 79


State 51

   30 ForStmt: KEYFOR . LEFTBRAKET Exp SEMICOLEN Exp SEMICOLEN Exp RIGHTBRAKET Stmt

    LEFTBRAKET  shift, and go to state 80


State 52

   32 ReturnStmt: KEYRETURN .
   33           | KEYRETURN . Exp

    LEFTBRAKET   shift, and go to state 43
    OPADD        shift, and go to state 44
    OPMINUS      shift, and go to state 45
    OPSELFADD    shift, and go to state 46
    OPSELFMINUS  shift, and go to state 47
    ROPNOT       shift, and go to state 48
    CONSTBOOL    shift, and go to state 25
    CONSTCHAR    shift, and go to state 26
    CONSTINTD    shift, and go to state 27
    CONSTINTH    shift, and go to state 28
    CONSTFLOAT   shift, and go to state 29
    CONSTSTRING  shift, and go to state 30
    IDENTIFIER   shift, and go to state 54

    $default  reduce using rule 32 (ReturnStmt)

    Exp         转到状态 81
    CONSTVALUE  转到状态 64


State 53

   34 PrintStmt: KEYPRINT . LEFTBRAKET Exp RIGHTBRAKET

    LEFTBRAKET  shift, and go to state 82


State 54

   54 Exp: IDENTIFIER . OPSELFADD
   55    | IDENTIFIER . OPSELFMINUS
   62    | IDENTIFIER . LEFTBRAKET Args RIGHTBRAKET
   63    | IDENTIFIER . LEFTBRAKET RIGHTBRAKET
   64    | IDENTIFIER .

    LEFTBRAKET   shift, and go to state 83
    OPSELFADD    shift, and go to state 84
    OPSELFMINUS  shift, and go to state 85

    $default  reduce using rule 64 (Exp)


State 55

   21 Stmt: CompSt .

    $default  reduce using rule 21 (Stmt)


State 56

   17 CompSt: LEFTBRACE DefList StmtList . RIGHTBRACE

    RIGHTBRACE  shift, and go to state 86


State 57

   18 StmtList: Stmt . StmtList

    error        shift, and go to state 42
    LEFTBRAKET   shift, and go to state 43
    LEFTBRACE    shift, and go to state 17
    OPADD        shift, and go to state 44
    OPMINUS      shift, and go to state 45
    OPSELFADD    shift, and go to state 46
    OPSELFMINUS  shift, and go to state 47
    ROPNOT       shift, and go to state 48
    KEYIF        shift, and go to state 49
    KEYWHILE     shift, and go to state 50
    KEYFOR       shift, and go to state 51
    KEYRETURN    shift, and go to state 52
    KEYPRINT     shift, and go to state 53
    CONSTBOOL    shift, and go to state 25
    CONSTCHAR    shift, and go to state 26
    CONSTINTD    shift, and go to state 27
    CONSTINTH    shift, and go to state 28
    CONSTFLOAT   shift, and go to state 29
    CONSTSTRING  shift, and go to state 30
    IDENTIFIER   shift, and go to state 54

    RIGHTBRACE  reduce using rule 19 (StmtList)

    CompSt      转到状态 55
    StmtList    转到状态 87
    Stmt        转到状态 57
    IfStmt      转到状态 58
    ForStmt     转到状态 59
    WhileStmt   转到状态 60
    ReturnStmt  转到状态 61
    PrintStmt   转到状态 62
    Exp         转到状态 63
    CONSTVALUE  转到状态 64


State 58

   22 Stmt: IfStmt .

    $default  reduce using rule 22 (Stmt)


State 59

   23 Stmt: ForStmt .

    $default  reduce using rule 23 (Stmt)


State 60

   24 Stmt: WhileStmt .

    $default  reduce using rule 24 (Stmt)


State 61

   25 Stmt: ReturnStmt . SEMICOLEN

    SEMICOLEN  shift, and go to state 88


State 62

   26 Stmt: PrintStmt . SEMICOLEN

    SEMICOLEN  shift, and go to state 89


State 63

   20 Stmt: Exp . SEMICOLEN
   42 Exp: Exp . OPASSIGN Exp
   43    | Exp . ROPAND Exp
   44    | Exp . ROPOR Exp
   45    | Exp . RELOP Exp
   46    | Exp . OPADD Exp
   47    | Exp . OPMINUS Exp
   48    | Exp . OPMULTIPLY Exp
   49    | Exp . OPDIVIDE Exp
   50    | Exp . OPADDASSIGN Exp
   51    | Exp . OPMINUSASSIGN Exp
   52    | Exp . OPMULASSIGN Exp
   53    | Exp . OPDIVASSIGN Exp

    SEMICOLEN      shift, and go to state 90
    OPASSIGN       shift, and go to state 91
    OPADD          shift, and go to state 92
    OPMINUS        shift, and go to state 93
    OPMULTIPLY     shift, and go to state 94
    OPDIVIDE       shift, and go to state 95
    OPADDASSIGN    shift, and go to state 96
    OPMINUSASSIGN  shift, and go to state 97
    OPMULASSIGN    shift, and go to state 98
    OPDIVASSIGN    shift, and go to state 99
    ROPAND         shift, and go to state 100
    ROPOR          shift, and go to state 101
    RELOP          shift, and go to state 102


State 64

   65 Exp: CONSTVALUE .

    $default  reduce using rule 65 (Exp)


State 65

   35 DefList: Def DefList .

    $default  reduce using rule 35 (DefList)


State 66

   14 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 14 (VarList)


State 67

   11 ExtDecList: IDENTIFIER OPASSIGN CONSTVALUE COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 68

   41 Dec: IDENTIFIER OPASSIGN . Exp

    LEFTBRAKET   shift, and go to state 43
    OPADD        shift, and go to state 44
    OPMINUS      shift, and go to state 45
    OPSELFADD    shift, and go to state 46
    OPSELFMINUS  shift, and go to state 47
    ROPNOT       shift, and go to state 48
    CONSTBOOL    shift, and go to state 25
    CONSTCHAR    shift, and go to state 26
    CONSTINTD    shift, and go to state 27
    CONSTINTH    shift, and go to state 28
    CONSTFLOAT   shift, and go to state 29
    CONSTSTRING  shift, and go to state 30
    IDENTIFIER   shift, and go to state 54

    Exp         转到状态 103
    CONSTVALUE  转到状态 64


State 69

   37 Def: TYPE DecList SEMICOLEN .

    $default  reduce using rule 37 (Def)


State 70

   39 DecList: Dec COMMA . DecList

    IDENTIFIER  shift, and go to state 39

    DecList  转到状态 104
    Dec      转到状态 41


State 71

   27 Stmt: error SEMICOLEN .

    $default  reduce using rule 27 (Stmt)


State 72
